--- a/gisModule/templates/gisModule/login.html
+++ b/gisModule/templates/gisModule/login.html
@@ -150,7 +150,7 @@
 				<div class="col-sm-4 col-sm-offset-1">
 					<div class="login-form"><!--login form-->
 						<h2>Login to your account</h2>
-						<form id="login_form" method="post">
+						<form id="login_form" method="post"> {% csrf_token %}
 							<input name="username" type="text" placeholder="Username" />
 							<input name="password" type="password" placeholder="Password" />
 							<span>
@@ -167,7 +167,7 @@
 				<div class="col-sm-4">
 					<div class="signup-form"><!--sign up form-->
 						<h2>New User Signup!</h2>
-						<form id="register_form" method="post">
+						<form id="register_form" method="post"> {% csrf_token %}
                             <input name="first_name" type="text" placeholder="First Name"/>
                             <input name="last_name" type="text" placeholder="Last Name"/>
 							<input name="username" type="text" placeholder="Username"/>
