UI Improvements on Route Selection

--- a/gisModule/templates/gisModule/cart.html
+++ b/gisModule/templates/gisModule/cart.html
@@ -13,7 +13,8 @@
 
     <section style="margin-top: 20px; text-align: center" id="route_selection" hidden>
     <div id="champ_routes"></div>
-    <div id="other_routes"></div>
+        <div><ul class="nav nav-pills nav-justified"><li><a id="show_more_routes_button" href="#" style="color: orange"><i id="show_more_routes_icon" style="font-size: x-large" class="fa fa-arrow-down"></i></a></li></ul></div>
+    <div id="other_routes" hidden></div>
     </section>
 
     <section style="margin-top: 100px" id="cart_items">
