False Price Voting System Is Implemented - After high counts of blames for a retailer product, it will be sent to random users for voting. - If %50 says "It's a false price", auth. will be informed about this product. - Wrong votes will reduce user's reputation, and correct votes will improve user's reputation. - If a product voted "yes", it will be hidden in product list. - This process is implemented with django-background-tasks. Each hour, these checks will be made in server-side.

--- a/gisModule/templates/gisModule/account.html
+++ b/gisModule/templates/gisModule/account.html
@@ -46,6 +46,11 @@
                                                 <a id="manage_groups_button" href="#">Manage Groups</a>
                                             </h4>
                                         </div>
+                                        <div class="panel-heading">
+                                            <h4 class="panel-title">
+                                                <a id="received_proposals_button" href="#">Received Proposals</a>
+                                            </h4>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -374,6 +379,10 @@
                                 <br>
                                 <h2>Saved Addresses</h2>
                                 <div id="saved_addresses"></div>
+                            </div>
+
+                            <div id="received_proposals" class="replay-box" hidden> <!--Received Proposals-->
+                                <p>Received proposals will be showed here!</p>
                             </div>
                         </div>
                     </div><!--/user_panel-->
