--- a/gisModule/templates/gisModule/login.html
+++ b/gisModule/templates/gisModule/login.html
@@ -129,7 +129,7 @@
 										<li><a href="blog-single.html">Blog Single</a></li>
                                     </ul>
                                 </li> 
-								<li><a href="404.html">404</a></li>
+								<li><a href="../404.html">404</a></li>
 								<li><a href="contact-us.html">Contact</a></li>
 							</ul>
 						</div>
