False Price Report system is fully implemented - Running "python manage.py process_tasks" command in a new terminal session will check report status of products in every 30 sec(for test purposes, this time should be longer in production version) - If enough users reports a specific retailer product, random online users will get a report. - After each user replies these reports, system will automatically evaluate these reports. - If report is accepted, related retailer product will be removed from store.

--- a/gisModule/templates/gisModule/base.html
+++ b/gisModule/templates/gisModule/base.html
@@ -155,7 +155,7 @@
             }
         });
 
-        channel.bind('blame_verification_required', function(data) {
+        channel.bind('new_proposal', function(data) {
             show_account_notif(data['message'], 10000);
         });
 
