Some statistical information added into shopping list relations - Several bug fixes - Money cost, distance cost, time cost information are added into shopping list - Detailed information are added into shopping list items - BaseProduct model, "productID" field is renamed as "id"

--- a/gisModule/templates/gisModule/account.html
+++ b/gisModule/templates/gisModule/account.html
@@ -399,14 +399,14 @@
                                                                                      src="http://freevector.co/wp-content/uploads/2009/12/56902-double-up-arrow.png"> &nbsp;Reputation<br> <div style="color: darkorange" id="reputation"></div></span>
                                 </div>
                                 <br><br>
-                                <div class="row"><span><img style="width: 2em; height: 2em;"
+                                <div id="favorite_product_toggle" class="row"><span><img style="width: 2em; height: 2em;"
                                                                                      src="http://classroomclipart.com/images/gallery/Clipart/Silhouettes/TN_star-silhouette-1108.jpg"> &nbsp;Favorite Product<br> <div style="color: darkorange" id="favorite_product"></div></span>
-                                </div>
-                                <br><br>
-                                <div class="row"><span><img style="width: 2em; height: 2em;"
+                                <br><br></div>
+
+                                <div id="favorite_category_toggle" class="row"><span><img style="width: 2em; height: 2em;"
                                                                                      src="https://cdn3.iconfinder.com/data/icons/audio-and-video-3/512/110-128.png"> &nbsp;Favorite Category<br> <div style="color: darkorange" id="favorite_category"></div></span>
-                                </div>
-                                <br><br>
+                                <br><br></div>
+
                                 <div class="row"><span><img style="width: 2em; height: 2em;"
                                                                                      src="https://image.freepik.com/free-icon/plus-sign_318-54005.jpg"> &nbsp;Total Products Purchased<br> <div style="color: darkorange" id="total_products"></div></span>
                                 </div>
