--- a/gisModule/templates/gisModule/account.html
+++ b/gisModule/templates/gisModule/account.html
@@ -36,11 +36,11 @@
                                                 <a id="statistics_button" href="">Statistics</a>
                                             </h4>
                                         </div>
-{#                                        <div class="panel-heading">#}
-{#                                            <h4 class="panel-title">#}
-{#                                                <a href="">Regional Settings</a>#}
-{#                                            </h4>#}
-{#                                        </div>#}
+                                        {#                                        <div class="panel-heading">#}
+                                        {#                                            <h4 class="panel-title">#}
+                                        {#                                                <a href="">Regional Settings</a>#}
+                                        {#                                            </h4>#}
+                                        {#                                        </div>#}
                                         <div class="panel-heading">
                                             <h4 class="panel-title">
                                                 <a id="manage_friends_button" href="#">Manage Friends</a>
@@ -72,11 +72,11 @@
                                 </div>
                                 <div id="cart_alt" class="panel-collapse collapse">
                                     <div class="panel-body">
-{#                                        <div class="panel-heading">#}
-{#                                            <h4 class="panel-title">#}
-{#                                                <a href="">General Settings</a>#}
-{#                                            </h4>#}
-{#                                        </div>#}
+                                        {#                                        <div class="panel-heading">#}
+                                        {#                                            <h4 class="panel-title">#}
+                                        {#                                                <a href="">General Settings</a>#}
+                                        {#                                            </h4>#}
+                                        {#                                        </div>#}
                                         <div class="panel-heading">
                                             <h4 class="panel-title">
                                                 <a id="manage_lists_button" href="#">Manage Lists</a>
@@ -103,11 +103,11 @@
                                                 <a id="route_default_settings_button" href="#">Default Settings</a>
                                             </h4>
                                         </div>
-{#                                        <div class="panel-heading">#}
-{#                                            <h4 class="panel-title">#}
-{#                                                <a href="">Algorithm Settings</a>#}
-{#                                            </h4>#}
-{#                                        </div>#}
+                                        {#                                        <div class="panel-heading">#}
+                                        {#                                            <h4 class="panel-title">#}
+                                        {#                                                <a href="">Algorithm Settings</a>#}
+                                        {#                                            </h4>#}
+                                        {#                                        </div>#}
                                         <div class="panel-heading">
                                             <h4 class="panel-title">
                                                 <a id="address_book_button" href="#">Address Book</a>
@@ -393,33 +393,52 @@
                             <div id="received_proposals" class="replay-box" hidden> <!--Received Proposals--></div>
 
                             <div style="text-align: center" id="statistics"> <!--Statistics-->
-                                <div id="category_count_chart" style="display: block; margin: 0 auto; width: 600px; height: 600px;"></div>
-                                <div id="category_price_chart" style="display: block; margin: 0 auto; width: 600px; height: 600px;"></div>
+                                <div class="row"><span><img style="width: 2em; height: 2em;"
+                                                            src="http://freevector.co/wp-content/uploads/2009/12/56902-double-up-arrow.png"> &nbsp;Reputation<br> <div
+                                        style="color: darkorange" id="reputation"></div></span>
+                                </div>
+                                <br><br>
+                                <div id="favorite_product_toggle" class="row"><span><img
+                                        style="width: 2em; height: 2em;"
+                                        src="http://classroomclipart.com/images/gallery/Clipart/Silhouettes/TN_star-silhouette-1108.jpg"> &nbsp;Favorite Product<br> <div
+                                        style="color: darkorange" id="favorite_product"></div></span>
+                                    <br><br></div>
+
+                                <div id="favorite_category_toggle" class="row"><span><img
+                                        style="width: 2em; height: 2em;"
+                                        src="https://cdn3.iconfinder.com/data/icons/audio-and-video-3/512/110-128.png"> &nbsp;Favorite Category<br> <div
+                                        style="color: darkorange" id="favorite_category"></div></span>
+                                    <br><br></div>
+
+                                <div id="favorite_retailer_toggle" class="row"><span><img
+                                        style="width: 2em; height: 2em;"
+                                        src="https://image.freepik.com/free-icon/school-building_318-62517.jpg"> &nbsp;Favorite Retailer<br> <div
+                                        style="color: darkorange" id="favorite_retailer"></div></span>
+                                    <br><br></div>
 
                                 <div class="row"><span><img style="width: 2em; height: 2em;"
-                                                                                     src="http://freevector.co/wp-content/uploads/2009/12/56902-double-up-arrow.png"> &nbsp;Reputation<br> <div style="color: darkorange" id="reputation"></div></span>
+                                                            src="https://image.freepik.com/free-icon/plus-sign_318-54005.jpg"> &nbsp;Total Products Purchased<br> <div
+                                        style="color: darkorange" id="total_products"></div></span>
                                 </div>
                                 <br><br>
-                                <div id="favorite_product_toggle" class="row"><span><img style="width: 2em; height: 2em;"
-                                                                                     src="http://classroomclipart.com/images/gallery/Clipart/Silhouettes/TN_star-silhouette-1108.jpg"> &nbsp;Favorite Product<br> <div style="color: darkorange" id="favorite_product"></div></span>
-                                <br><br></div>
+                                <div class="row"><span><img style="width: 2em; height: 2em;"
+                                                            src="https://phonegap.com/uploads/artwork/PhoneGap-Symbol-Black.svg"> &nbsp;Total Price Blames Created<br> <div
+                                        style="color: darkorange" id="total_blames"></div></span>
+                                </div>
+                                <br><br>
+                                <div class="row"><span><img style="width: 2em; height: 2em;"
+                                                            src="https://image.flaticon.com/icons/svg/2/2772.svg"> &nbsp;Shopping Lists Completed<br> <div
+                                        style="color: darkorange" id="total_shopping_lists"></div></span>
+                                </div>
 
-                                <div id="favorite_category_toggle" class="row"><span><img style="width: 2em; height: 2em;"
-                                                                                     src="https://cdn3.iconfinder.com/data/icons/audio-and-video-3/512/110-128.png"> &nbsp;Favorite Category<br> <div style="color: darkorange" id="favorite_category"></div></span>
-                                <br><br></div>
-
-                                <div class="row"><span><img style="width: 2em; height: 2em;"
-                                                                                     src="https://image.freepik.com/free-icon/plus-sign_318-54005.jpg"> &nbsp;Total Products Purchased<br> <div style="color: darkorange" id="total_products"></div></span>
-                                </div>
-                                <br><br>
-                                <div class="row"><span><img style="width: 2em; height: 2em;"
-                                                                                     src="https://phonegap.com/uploads/artwork/PhoneGap-Symbol-Black.svg"> &nbsp;Total Price Blames Created<br> <div style="color: darkorange" id="total_blames"></div></span>
-                                </div>
-                                <br><br>
-                                <div class="row"><span><img style="width: 2em; height: 2em;"
-                                                                                     src="https://image.flaticon.com/icons/svg/2/2772.svg"> &nbsp;Shopping Lists Completed<br> <div style="color: darkorange" id="total_shopping_lists"></div></span>
-                                </div>
-                                <br><br>
+                                <div id="retailer_count_chart"
+                                     style="display: block; margin: 0 auto; width: 50%; height: 50%;"></div>
+                                <div id="category_count_chart"
+                                     style="display: block; margin: 0 auto; width: 50%; height: 50%;"></div>
+                                <div id="category_price_chart"
+                                     style="display: block; margin: 0 auto; width: 50%; height: 50%;"></div>
+                                <div id="retailer_price_chart"
+                                     style="display: block; margin: 0 auto; width: 50%; height: 50%;"></div>
                             </div> <!-- Statistics End -->
                         </div><!--/user_panel-->
                     </div>
